fix spacing of index__post

--- a/source/styles/modules/index/index__post.styl
+++ b/source/styles/modules/index/index__post.styl
@@ -1,12 +1,10 @@
 .index-posts
   fxbx(y)
-  m-n: $gap
 
 .index-post
-  p-x: 5%
+  p: $gap2 5%
   &:not(:last-child)
     b-s: 3px
-  m-s: $gap
   +above($bp)
     p: $gap
 
@@ -14,7 +12,6 @@
   &__date
   &__preview
   &__read-button
-  &__tags
     m-s: ($gap / 2)
 
   &__title
